ros2_ws/log/build_2023-06-06_23-55-06/robot_controller/stdout_stderr.log
running develop
running egg_info
writing ../../build/robot_controller/robot_controller.egg-info/PKG-INFO
writing dependency_links to ../../build/robot_controller/robot_controller.egg-info/dependency_links.txt
writing entry points to ../../build/robot_controller/robot_controller.egg-info/entry_points.txt
writing requirements to ../../build/robot_controller/robot_controller.egg-info/requires.txt
writing top-level names to ../../build/robot_controller/robot_controller.egg-info/top_level.txt
reading manifest file '../../build/robot_controller/robot_controller.egg-info/SOURCES.txt'
writing manifest file '../../build/robot_controller/robot_controller.egg-info/SOURCES.txt'
running build
running build_py
copying robot_controller/motor_controller.py -> /home/zubeyir48/ros2_ME462_ws/build/robot_controller/build/lib/robot_controller
running install
running install_lib
copying /home/zubeyir48/ros2_ME462_ws/build/robot_controller/build/lib/robot_controller/motor_controller.py -> /home/zubeyir48/ros2_ME462_ws/install/robot_controller/lib/python3.10/site-packages/robot_controller
byte-compiling /home/zubeyir48/ros2_ME462_ws/install/robot_controller/lib/python3.10/site-packages/robot_controller/motor_controller.py to motor_controller.cpython-310.pyc
  File "/home/zubeyir48/ros2_ME462_ws/install/robot_controller/lib/python3.10/site-packages/robot_controller/motor_controller.py", line 5
    from robot_controller.msg import
                                    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/zubeyir48/ros2_ME462_ws/install/robot_controller/lib/python3.10/site-packages/robot_controller-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/robot_controller/robot_controller.egg-info to /home/zubeyir48/ros2_ME462_ws/install/robot_controller/lib/python3.10/site-packages/robot_controller-0.0.0-py3.10.egg-info
running install_scripts
Installing motor_controller script to /home/zubeyir48/ros2_ME462_ws/install/robot_controller/lib/robot_controller
writing list of installed files to '/home/zubeyir48/ros2_ME462_ws/build/robot_controller/install.log'
